--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "fr-FR"
 title                    : "Édouard Bouté"
 title_separator          : "-"
 name                     : &name "Édouard Bouté"
-description              : &description "Docteur en SIC Postdoctorant au CERES"
+description              : &description "Docteur en SIC. Postdoctorant au CERES"
 url                      : https://edouardboute.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "EdouardBoute/edouardboute.github.io"
@@ -24,17 +24,17 @@ author:
   avatar           : "profile.png"
   name             : "Édouard Bouté"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
-  uri              : # URL
-  email            : "none@example.org" 
+  bio              : "Docteur en SIC Postdoctorant au CERES"
+  location         : "Paris, France"
+  employer         : "CERES, Sorbonne Université"
+  uri              : "https://ceres.sorbonne-universite.fr"
+  email            : "edouard.boute@sorbonne-universite.fr" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : # "http://orcid.org/yourorcidurl"
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
 
