--- a/_config.yml
+++ b/_config.yml
@@ -24,30 +24,30 @@ author:
   avatar           : "profile.png"
   name             : "Édouard Bouté"
   pronouns         : # example: "she/her"  
-  bio              : "Docteur en SIC Postdoctorant au CERES"
+  bio              : "Docteur en SIC Postdoc au CERES"
   location         : "Paris, France"
-  employer         : "CERES, Sorbonne Université"
-  uri              : "https://ceres.sorbonne-universite.fr"
+  employer         : "Sorbonne Université"
+  uri              : # "https://ceres.sorbonne-universite.fr"
   email            : "edouard.boute@sorbonne-universite.fr" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=wPFvMFQAAAAJ&hl=fr"
   impactstory      : # URL
   orcid            : # "http://orcid.org/yourorcidurl"
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
+  pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  researchgate     : "https://cv.hal.science/edouard-boute"
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : #"academicpages"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # "bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
@@ -64,7 +64,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : "UniofOxford"  # Replace this with your X / Twitter handle
+  twitter          : "EdouardBoute"  # Replace this with your X / Twitter handle
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
