--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,20 +3,12 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Communications"
+    url: /communications/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Enseignements"
+    url: /enseignements/    
     
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+  # - title: "CV"
+  #  url: /cv/
+  
