--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,8 @@ locale                   : "fr-FR"
 title                    : "Édouard Bouté"
 title_separator          : "-"
 name                     : &name "Édouard Bouté"
-description              : &description "Docteur en SIC. Postdoctorant au CERES"
+description              : &description "Docteur en SIC." 
+description              : &description "Postdoctorant au CERES"
 url                      : https://edouardboute.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "EdouardBoute/edouardboute.github.io"
