--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,8 @@ author:
   avatar           : "profile.png"
   name             : "Édouard Bouté"
   pronouns         : # example: "she/her"  
-  bio              : "Docteur en SIC Postdoc au CERES"
+  bio              : "Docteur en SIC"
+  bio              : "Postdoctorant au CERES"
   location         : "Paris, France"
   employer         : "Sorbonne Université"
   uri              : # "https://ceres.sorbonne-universite.fr"
