--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,6 +9,9 @@ main:
   - title: "Enseignements"
     url: /teaching/    
 
+  - title: "Événements"
+    url: /events/   
+
   - title: "Médias"
     url: /medias/    
      
